styles.css
/* Size and style surprise image */
#surpriseImage {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: auto;
    height: 100%;
}

/* Position canvas overlay */
#overlayCanvas {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: auto;
    height: 100%;
}

/* Hide scrollbars and prevent bounce on mobile */
body {
    overflow: hidden;
    position: fixed;
    width: 100%;
    height: 100%;
    margin: 0;
    overscroll-behavior: none;
  }

/* Default button styling */
button {
    background-color: pink;
    border: none;
    padding: 10px 10px;
    border-radius: 20px;
    font-size: 1rem;
    font-weight: 900;
    text-align: center;
    color: #000;
}

/* Set parent container for surprise image */
.image-container {
    position: relative;
    height: 70vh;
    width: auto;
    margin: 0 auto;
    text-align: center;
    margin-top: 20px;
}

/* Set button parent container */
.buttons-container {
    position: relative;
    margin: 0 auto;
    text-align: center;
    margin-top: 20px;
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: center;   
}

/* Desktop styles for button parent container */
@media only screen and (min-width: 768px) {
    .buttons-container {
        margin-top: 50px;
        gap: 50px;
        width: 20%;
    }
} 

.buttons-container button {
    margin: 0 10px;
  }

/* Style modals (from W3Schools modal tutorial, with my added customizations) */

/* Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }
  
  /* Modal content box */
  .modal-content {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 40vh;
    margin: 0 auto;
    padding: 5vh;
    border-radius: 20px;
    box-shadow: 2px 2px 20px rgba(0, 0, 0, .2);
    background-color: #fefefe;
    font-family: Arial, sans-serif;
  }
  
  /* Close button */
  .close {
    color: #aaa;
    position: absolute;
    top: 0;
    right: 10px;
    font-size: 4rem;
    font-weight: bold;
  }
  
  .close:hover,
  .close:focus {
    color: black;
    text-decoration: none;
    cursor: pointer;
  }

  /* Style theme buttons */
  .themeButton {
    margin-bottom: 5vh;
  }

  p {
    font-size: 1.5rem;
    text-align: left;
  }

  h1 {
    font-size: 2rem;
  }

